[gd_scene load_steps=2 format=3 uid="uid://cnmvcjs63tlp"]

[ext_resource type="Script" path="res://Prog52a.gd" id="1_uyenk"]

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uyenk")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 7.0
offset_right = 118.0
offset_bottom = 49.0
text = "Length: "

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 51.0
offset_right = 120.0
offset_bottom = 93.0
text = "Width: "

[node name="lblArea" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 105.0
offset_right = 901.0
offset_bottom = 158.0
text = "Area: 
"

[node name="lblPerim" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 162.0
offset_right = 901.0
offset_bottom = 215.0
text = "Perimeter: "

[node name="txtLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 7.0
offset_right = 247.0
offset_bottom = 38.0
placeholder_text = "Length"

[node name="txtWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 55.0
offset_right = 248.0
offset_bottom = 86.0
placeholder_text = "Width"

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 214.0
offset_right = 251.0
offset_bottom = 273.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 213.0
offset_right = 486.0
offset_bottom = 272.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 214.0
offset_right = 728.0
offset_bottom = 273.0
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
